objects/Application_Account_SFDC2__c.object
<CustomObject>
    <description>SFDC2: Used to capture Approved/Interested Account data</description>
    <fields>
        <fullName>APY__c</fullName>
        <description>Account APY</description>
        <label>APY</label>
        <precision>13</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>Account Name</description>
        <label>Account Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <description>Approved Account Number</description>
        <externalId>true</externalId>
        <label>Account Number</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Amount_Deposit__c</fullName>
        <description>Approved Account Amount Deposit</description>
        <label>Amount Deposit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Application_Account_Id__c</fullName>
        <externalId>true</externalId>
        <label>Application Account Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Application_Id__c</fullName>
        <description>Application associated with Account</description>
        <label>Application Id</label>
        <referenceTo>Application_SFDC2__c</referenceTo>
        <relationshipLabel>Application Accounts</relationshipLabel>
        <relationshipName>Application_Accounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Buy_Rate__c</fullName>
        <label>Buy Rate</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculated_Rate__c</fullName>
        <label>Calculated Rate</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Rate__c</fullName>
        <label>Contract Rate</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funding_Status__c</fullName>
        <description>Approved Account Funding Status</description>
        <label>Funding Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Ordered_Card__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Ordered Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Ordered_Checks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Ordered Checks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interest_Rate_Type__c</fullName>
        <description>Account Interest Rate Type</description>
        <label>Interest Rate Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Rate_Override__c</fullName>
        <description>Approved Account Is Rate Override</description>
        <label>Is Rate Override</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_Date__c</fullName>
        <description>Approved Account Issue Date</description>
        <label>Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <description>Account Product Code</description>
        <label>Product Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <description>Account Rate</description>
        <label>Rate</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term_Type__c</fullName>
        <description>Account Term Type</description>
        <label>Term Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <description>Account Term</description>
        <label>Term</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_Id__c</fullName>
        <description>Account Type Id</description>
        <externalId>true</externalId>
        <label>Type Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Account Type</description>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Application Account</label>
    <nameField>
        <displayFormat>Account-{000000}</displayFormat>
        <label>Application Account Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Accounts</pluralLabel>
    <recordTypes>
        <fullName>Approved_Account</fullName>
        <active>true</active>
        <description>Approved Account</description>
        <label>Approved Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Deposits</fullName>
        <active>true</active>
        <label>Deposits</label>
    </recordTypes>
    <recordTypes>
        <fullName>Interested_Account</fullName>
        <active>true</active>
        <description>Interested Account</description>
        <label>Interested Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Lending</fullName>
        <active>true</active>
        <label>Lending</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>